--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Levey write here</title>
-  <meta name="author" content="Matt Swanson" />
-
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet" type="text/css">
-
+  <meta name="author" content="Levey" />
   <link rel="stylesheet" href="/css/base.css">
   <link rel="stylesheet" href="/css/skeleton.css">
   <link rel="stylesheet" href="/css/screen.css">
