--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,11 @@
       <nav>
         <h2>Levey</h2>
         <ul>
-        <p>我是一个 iOS 软件开发者，并同时喜欢 Rails,  Node.js 等 Web 技术。</p>
-        <p>
-          我将会在这个网站分享我的生活以及工作中的思考和经历。
-        </p>
+        <p>吾乃一介软件开发者。</p>
+        <p>吾在此分享我的生活以及工作中的思考和经历。</p>
+        <p>Generating skill list...</p>
+        <p>iOS</p> <p>Ruby on Rails</p> <p>Node.js</p> <p>kukuku...</p>
+        
 
         <p style="margin-bottom: 10px;">
           Follow me:
