--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,9 +6,9 @@ comments: true
 <p class="meta">
 <a href="/"><i class="home icon-home"></i></a>
 </p>
-<h1 class="title">{{ page.title }}</h1>
+<h2 class="title">{{ page.title }}</h2>
 
-
+ <p class="signature"></p>
 <div id="post">
 {{ content }}
 
