--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,13 +20,14 @@
     <div class="four columns sidebar">
       <nav>
         <h2>Levey</h2>
+         <p> - </p>
         <ul>
-        <p>吾乃一介软件开发者。</p>
-        <p>吾在此分享我的生活以及工作中的思考和经历。</p>
-        <p>Generating skill list...</p>
-        <p>iOS</p> <p>Ruby on Rails</p> <p>Node.js</p> <p>kukuku...</p>
+        <p>iOS / Rails / Node Developer</p>
+        <p>Reader</p>
+        <p>Freelancer</p>
+        <p>Gamer</p>        
+        <p> - </p>
         
-
         <p style="margin-bottom: 10px;">
           Follow me:
           <div id="stalker">
