--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,70 +1,42 @@
-<!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Levey write here</title>
+  <title>Levey</title>
   <meta name="author" content="Levey" />
-  <link rel="stylesheet" href="/css/base.css">
-  <link rel="stylesheet" href="/css/skeleton.css">
-  <link rel="stylesheet" href="/css/screen.css">
-  <link rel="stylesheet" href="/css/layout.css">
-  <link rel="stylesheet" href="/fonts/font-awesome.css">
-
+  <meta name="keywords" content="levey" />
+  <meta name="description" content="levey blog" />
+  <meta name="language" content="Chinese" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name = "viewport" content = "maximum-scale=1.0,width=320,initial-scale=1.0" > 
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,width=320.1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="stylesheet" href="/css/h5bp.css">
+  <script src="http://code.jquery.com/jquery-1.9.0.min.js"></script>  
+  
 </head>
 <body>
-  <div class="container">
-    <div class="four columns sidebar">
-      <nav>
-        <h2>Levey</h2>
-         <p> - </p>
-        <ul>
-        <p>iOS / Rails / Node Developer</p>
-        <p>Reader</p>
-        <p>Freelancer</p>
-        <p>Gamer</p>        
-        <p> - </p>
-        
-        <p style="margin-bottom: 10px;">
-          Follow me:
-          <div id="stalker">
-            <a title="Levey on Github" target = "_blank" href="http://github.com/levey/"><i class="icon-github icon-large"></i></a>
-            <a title="Levey on Twitter" target = "_blank" href="http://twitter.com/leveyzhu"><i class="icon-twitter icon-large"></i></a>
-            <a title="RSS feed" target = "_blank" href="/atom.xml"><i class="icon-rss icon-large"></i></a>
-          </div>
-        </p>
-        </ul>
-      </nav>
-    </div>
+<div class="wrapper">
+  <header>
+  
+    <h1><a href="/">Levey</a></h1>
+    <p>Programmer, Freelancer, Reader </p>
+  
+    <ul class="navigation" id="nav"><li class="nav1"><a href="./products.html">Products</a></li><li class="nav2"><a  href="./contact.html">Contact</a></li><li class="nav3"><a href="./blog.html">Blog</a></li></ul>
 
-    <div class="eleven columns content">
-      {{ content }}
-    
-<!--       <div class="footer">
-          <div class="disclaimer">
-          <p>The postings on this site are my own and don't necessarily represent my 
-          employer’s positions, strategies or opinions.</p>
-        </div>
-      </div> -->
-    </div>
-  </div>
+  </header>
 
-<!-- <script type="text/javascript">
+  {{ content }}
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-13005539-2']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script> -->
+  
+  <footer>
+    &copy; 2013 SlyFiary. All rights reserved.
+  </footer>
+</div>
 
 </body>
 </html>
