--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,10 @@
 ---
-layout: default
-comments: true
+layout: blog
 ---
 
+<div roll="main" class="secondary">
 <p class="meta">
-<a href="/"><i class="home icon-home"></i></a>
+<a href="/blog.html"><i class="home icon-home"></i></a>
 </p>
 <h2 class="title">{{ page.title }}</h2>
 
@@ -22,4 +22,6 @@ comments: true
     <li><span>{{ post.date | date: "%Y-%m-%d" }} &raquo;</span> <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
+</div>
+
 </div>
