--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: blog
  <p class="signature">{{ page.date | date: "%Y-%m-%d " }} written by levey </p>
 </div>
 
-<div id="related">
+<!-- <div id="related">
   <h3>Related Posts</h3>
   <ul class="posts">
     {% for post in site.related_posts limit:3 %}
@@ -24,4 +24,4 @@ layout: blog
   </ul>
 </div>
 
-</div>
+</div> -->
