--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 	{{ content }}
   
   <footer>
-    &copy; 2013 SlyFiary. All rights reserved.
+    &copy; 2013 Levey. All rights reserved.
   </footer>
 </div>
 </body>
