--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -9,12 +9,12 @@
   <meta name="keywords" content="levey, iOS, developer, node.js, ruby, rails, hacker, photostring, remain" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="author" content="Levey" />
-  <link rel="stylesheet" href="./css/base.css">
-  <link rel="stylesheet" href="./css/skeleton.css">
-  <link rel="stylesheet" href="./css/blog.css">
-  <link rel="stylesheet" href="./css/layout.css">
+  <link rel="stylesheet" href="/css/base.css">
+  <link rel="stylesheet" href="/css/skeleton.css">
+  <link rel="stylesheet" href="/css/blog.css">
+  <link rel="stylesheet" href="/css/layout.css">
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet">
-  <link rel="stylesheet" href="./css/pygments.css">
+  <link rel="stylesheet" href="/css/pygments.css">
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
