--- a/css/h5bp.css
+++ b/css/h5bp.css
@@ -13,7 +13,7 @@ body { margin: 0; font-size: 1em; line-height: 1.4; }
 
 a { color: #000;}
 a:visited { color: #000; }
-a:hover { color: #0C84E8; }
+a:hover { color: #0090FF; }
 a:focus { outline: thin dotted; }
 a:hover, a:active { outline: 0; }
 a:link,a:hover,a:active {
@@ -150,7 +150,7 @@ ul.navigation li
 
 ul.navigation li:hover,ul.navigation li.on
 {
-    border-bottom:2px solid #0C84E8;
+    border-bottom:3px solid #0090FF;
 }
 
 
