--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,width=320.1">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" href="./css/h5bp.css">
-  <link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/fontello.css">
+  <!--<link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet">-->
   <script src="./js/jquery-1.9.1.min.js"></script>
 
   <script>
