--- a/css/h5bp.css
+++ b/css/h5bp.css
@@ -94,7 +94,6 @@ h3, h4 {
     font-weight: 700;
     font-size:1.5em;
     line-height:1.5em;
-    margin:25px 0 10px;
     text-align:left;
 }
 
@@ -155,7 +154,6 @@ ul.navigation li:hover,ul.navigation li.on
 
 
 ul.posts {
-  margin-top: 0;
   list-style-type: none;
   margin-bottom: 10px;
 }
@@ -163,7 +161,7 @@ ul.posts {
 ul.posts li {
   line-height: 22px;
   font-size: 16px;
-  margin-bottom: 0px;
+  margin: 10px 0 10px -40px;
 }
 
 ul.posts span {
@@ -327,7 +325,7 @@ input[type="submit"] {
 }
 
 .scantip {
-  margin-right: 150px;
+  margin-right: 134px;
   float: right;
 }
 
@@ -338,11 +336,12 @@ input[type="submit"] {
 }
 
 .contact-icons {
-  vertical-align: middle;
+  height: 135px;
   font-size: 56px; 
 }
 
 .contact-icon {
+  margin-top: 20px;
   display: inline-block;
   width: 23.5%;
   text-align: center;
