--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -11,7 +11,7 @@
   <meta name="author" content="Levey" />
   <link rel="stylesheet" href="/css/base.css">
   <link rel="stylesheet" href="/css/skeleton.css">
-  <link rel="stylesheet" href="/css/blog.css">
+  <link rel="stylesheet" href="/css/post.css">
   <link rel="stylesheet" href="/css/layout.css">
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/pygments.css">
