--- a/css/post.css
+++ b/css/post.css
@@ -8,7 +8,7 @@ body {
   color: #222222;
   line-height: 24px;
   margin: 0;
-  border-top: 7px solid #0C84E8;
+  border-top: 7px solid #0090FF;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -256,6 +256,7 @@ sup {
 }
 
 .home:hover {
+  color: #0090FF;
   text-decoration: none;
 }
 
@@ -272,5 +273,4 @@ sup {
   border-top: 3px solid #EEE;
   overflow: hidden;
 }
-
 
