--- a/css/h5bp.css
+++ b/css/h5bp.css
@@ -343,6 +343,11 @@ input[type="submit"] {
 }
 
 
+.levey {
+  /*color:#0090FF;*/
+}
+
+
 /* =============================================================================
    Media Queries
    ========================================================================== */
